Ensure the current heading in #toc always visible

--- a/vanjs.css
+++ b/vanjs.css
@@ -78,6 +78,8 @@ a {
 
 #toc > ul {
   list-style: square;
+  margin-block-start: 0;
+  margin-block-end: 0;
 }
 
 #toc a {
